Created layout and filled with content.

--- a/tribute/index.html
+++ b/tribute/index.html
@@ -1,11 +1,72 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Tribute Page</title>
 </head>
+
 <body>
-    
+    <div id="container">
+        <header id="title">
+            <h1>Lech Wałęsa</h1>
+            <p>The man who brought down communism</p>
+        </header>
+
+        <main id="main">
+            <div id="img-div">
+                <figure>
+                    <img id="image" src="https://goo.gl/SWFFns" alt="Lech Walesa in gesture of victory" />
+                    <figcaption id="img-caption">
+                        Lech Walesa - From electrician to destroyer of communism.
+                    </figcaption>
+                </figure>
+            </div>
+            <article id="tribute-info">
+                <h2>About</h2>
+                <p>
+                    Lech Wałęsa( born 29 September 1943) is a retired Polish politician and labour activist. He
+                    co-founded and headed Solidarity (Solidarność), the Soviet bloc's first independent trade union,
+                    won the Nobel Peace Prize in 1983, and served as President of Poland from 1990 to 1995.
+                </p>
+
+                <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Lech_Wa%C5%82%C4%99sa">Read
+                    more on Wikipedia</a>
+
+                <h2>Timeline</h2>
+                <ul>
+                    <li>1943 - Lech Walesa was born on 29 September 1943.</li>
+                    <li>1961 - He took up a job of car mechanic. </li>
+                    <li>1969 - Lech Walesa married Danuta Golos in 1969.</li>
+                    <li> 1970 - He joined Lenin Shipyard as an electrical technician.</li>
+                    <li> 1970 - He became leader of the strikes held by workers.</li>
+                    <li> 1976 - He eventually lost his job in 1976.</li>
+                    <li> 1978 - Lech Walesa began to organize Free Trade Unions.</li>
+                    <li> 1980 - He became the leader of the occupational strikes held in the Lenin Shipyard.</li>
+                    <li>1981 - Martial law was declared in the country on 13 December and Walesa was imprisoned.</li>
+                    <li>1982 - Walesa was released from the prison on14 November 1982. </li>
+                    <li>1983 - He was awarded the Nobel Peace Prize.</li>
+                    <li>1989 - Walesa organized the Citizenship Committee of the Chairman of Solidarity Trade Union.
+                    </li>
+                    <li>1989 - He became the first recipient of the liberty Medal which was awarded on 4 July 1989.
+                    </li>
+                    <li> 1990 - Lech Walesa was sworn in as the President of Poland on 9 December.</li>
+                    <li> 1995 - He lost the 1995 presidential election.</li>
+                    <li> 1997 - Walesa organized a new party called Solidarity Electoral Action in 1997.</li>
+                    <li> 2000 - Walesa further lost the presidential election in 2000.</li>
+                    <li> 2001 - He was awarded the Pacem in Terris Award in 2001.</li>
+                    <li> 2002 - Walesa represented Europe in the opening ceremony of the XIX Olympic Winter Games.</li>
+                    <li>2007 - He was awarded the title ‘Defender of Faith’ on 30 May. </li>
+                    <li>2008 - He had a pacemaker implanted in his heart on 27 February 2008.</li>
+                </ul>
+
+                
+            </article>
+        </main>
+    </div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
+
 </html>
