--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Po</title>
 </head>
 <body>
-    <p><a href="/survey/index.html">Survey Form</a></p>
+    <p><a href="/survey">Survey Form</a></p>
     <p><a href="/tribute/index.html">Tribute Page</a></p>
     <p><a href="/documentation/index.html">Technical Documentation</a></p>
     <p><a href="/landing-page/index.html">Landing Page</a></p>
