--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -26,8 +26,16 @@
     <div id="container">
         <section class="section" id="offer">
             <h2>What we offer</h2>
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/A7Sy32HJ0s4" frameborder="0"
-                allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <div class="offer-flex">
+                <div class="offer-flex-cell-1"><iframe id="video" src="https://www.youtube.com/embed/A7Sy32HJ0s4"
+                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+                <div class="offer-flex-cell-2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, voluptate sunt molestias earum
+                    tempore assumenda quaerat dolore facilis sed adipisci tenetur laborum? Saepe suscipit perspiciatis
+                    ipsa assumenda, beatae rem! Asperiores.
+                </div>
+            </div>
         </section>
 
         <section class="section" id="pricing">
@@ -35,7 +43,7 @@
             <div id="packages">
                 <div class="package-box">
                     <div class="package-name">
-                        Basic
+                        BASIC
                     </div>
                     <div class="package-offer">
                         <ul>
@@ -47,7 +55,7 @@
                 </div>
                 <div class="package-box">
                     <div class="package-name">
-                        Premium
+                        PREMIUM
                     </div>
                     <div class="package-offer">
                         <ul>
@@ -59,7 +67,7 @@
                 </div>
                 <div class="package-box">
                     <div class="package-name">
-                        Standard
+                        STANDARD
                     </div>
                     <div class="package-offer">
                         <ul>
