--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -24,11 +24,18 @@
     </header>
 
     <div id="container">
+        <section class="section">
+            <h2>Educate Yourself</h2>
+            <div class="section-content">
+                
+            </div>
+        </section>
+
         <section class="section" id="offer">
             <h2>What we offer</h2>
-            <div class="offer-flex">
-                <div class="offer-flex-cell-1"><iframe id="video" src="https://www.youtube.com/embed/A7Sy32HJ0s4"
-                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <div class="section-content offer-flex">
+                <div class="offer-flex-cell-1">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/HndV87XpkWg?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
                 <div class="offer-flex-cell-2">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, voluptate sunt molestias earum
@@ -40,7 +47,7 @@
 
         <section class="section" id="pricing">
             <h2>Our prices</h2>
-            <div id="packages">
+            <div class="section-content" id="packages">
                 <div class="package-box">
                     <div class="package-name">
                         BASIC
@@ -82,7 +89,7 @@
 
         <section class="section" id="testimony">
             <h2>What our students say</h2>
-            <div id="students">
+            <div class="section-content" id="students">
                 <div class="student-box">
                     <img src="https://goo.gl/g7HzM1" />
                     <p class="quote">"I like this"</p>
