--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -26,12 +26,12 @@
     <div id="container">
 
         <section id="intro" class="section">
-            <h2 class="company-name">EduHub<p>This is where you'll learn!</p></h2>
+            <h2 class="company-name">EduHub<p>Get Smart!</p></h2>
             
             <div class="section-content">
-                <form action="" id="form">
-                    <input type="email" name="" id="email" placeholder="Your email">
-                    <input type="submit" id="submit" value="Sign Up" >
+                <form action="https://www.freecodecamp.com/email-submit" id="form">
+                    <input type="email" name="email" id="email" placeholder="Your email">
+                    <input type="submit" id="submit" value="Sign Up">
                 </form>
             </div>
         </section>
