Responsive design update

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section class="section" id="pricing">
-            <h2>Our prices</h2>
+            <h2>Our Packages</h2>
             <div class="section-content" id="packages">
                 <div class="package-box">
                     <div class="package-name">
