--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -40,7 +40,9 @@
             <h2>What we offer</h2>
             <div class="section-content offer-flex">
                 <div class="offer-flex-cell-1">
+                    <div id="video-container">
                         <iframe id="video" width="560" height="315" src="https://goo.gl/xiar94" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
                 </div>
                 <div class="offer-flex-cell-2">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, voluptate sunt molestias earum
