--- a/index.html
+++ b/index.html
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <title>Po</title>
 </head>
+
 <body>
-    <p><a href="/survey">Survey Form</a></p>
-    <p><a href="/tribute/index.html">Tribute Page</a></p>
-    <p><a href="/documentation/index.html">Technical Documentation</a></p>
-    <p><a href="/landing-page/index.html">Landing Page</a></p>
+    <div id="container">
+        <div id="header">
+            <div id="name">
+                Radoslaw Polczyk
+            </div>
+            <nav>
+                <a>Contact</a>
+                <a>GitHub</a>
+            </nav>
+        </div> <!-- #header -->
+
+        <div class="project">
+            <a href="/survey">Survey Form</a>
+        </div>
+        <p><a href="/survey">Survey Form</a></p>
+        <p><a href="/tribute/index.html">Tribute Page</a></p>
+        <p><a href="/documentation/index.html">Technical Documentation</a></p>
+        <p><a href="/landing-page/index.html">Landing Page</a></p>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eos perspiciatis ab ipsa quas minima libero
+            consectetur, eaque impedit molestias! Laudantium eos autem commodi? Quaerat nobis aliquid id repudiandae.
+            Beatae.
+        </p>
+
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque incidunt quisquam ipsum tenetur eveniet,
+            officiis cupiditate, expedita nobis, nulla veniam labore nemo excepturi corporis sunt pariatur! A soluta
+            architecto porro.
+        </p>
+
+        <div id="showcase">
+
+            <div class="project">
+                <img src="https://loremflickr.com/200/200" />
+            </div> <!-- .project -->
+
+            <div class="project">
+                <img src="https://loremflickr.com/200/200" />
+            </div> <!-- .project -->
+
+            <div class="project">
+                <img src="https://loremflickr.com/200/200" />
+            </div> <!-- .project -->
+
+            <div class="project">
+                <img src="https://loremflickr.com/200/200" />
+            </div> <!-- .project -->
+
+            <div class="project">
+                <img src="https://loremflickr.com/200/200" />
+            </div> <!-- .project -->
+
+        </div> <!-- #showcase -->
+    </div> <!-- #container -->
 </body>
+
 </html>
