--- a/index.html
+++ b/index.html
@@ -10,61 +10,91 @@
 </head>
 
 <body>
-    <div id="container">
-        <div id="header">
-            <div id="name">
-                Radoslaw Polczyk
+    <div id="bg">
+        <div id="container">
+            <div id="header">
+                <div id="name">
+                    <h1>Radoslaw Polczyk</h1>
+                </div>
+                <nav>
+                    <div>
+                        <a href="#">Contact</a>
+                        <a href="#">GitHub</a>
+                    </div>
+                </nav>
+            </div> <!-- #header -->
+            <div id="content">
+
+                <p><a href="/survey">Survey Form</a></p>
+                <p><a href="/tribute/index.html">Tribute Page</a></p>
+                <p><a href="/documentation/index.html">Technical Documentation</a></p>
+                <p><a href="/landing-page/index.html">Landing Page</a></p>
+
+                <section id="about-me">
+                    <div class="about-me">
+                        <h2>A little about me:</h2>
+                        <p>
+                            Hi! Thanks for visiting my portfolio.
+                            My name is Radoslaw but most people call me Radek.
+                            I'm a web developer living in London, UK. I hope you will find here
+                            something that you like. 
+                            <br>
+                            If you are looking for a web developer let me know.
+                        </p>
+                    </div>
+
+                    <div class="about-me">
+                        <h2>Things I know:</h2>
+                        <h3>Qualifications</h3>
+                        <p>Computer Science:Games Programming (Bsc) - 2:2 </p>
+                        
+                        <h3>Skills</h3>
+                        <ul id="skills">
+                            <li>HTML</li>
+                            <li>CSS</li>
+
+                            <li>JavaScript</li>
+                            <li>Google Fu</li>
+                        </ul>
+                    </div>
+                </section>
+
             </div>
-            <nav>
-                <a>Contact</a>
-                <a>GitHub</a>
-            </nav>
-        </div> <!-- #header -->
 
-        <div class="project">
-            <a href="/survey">Survey Form</a>
-        </div>
-        <p><a href="/survey">Survey Form</a></p>
-        <p><a href="/tribute/index.html">Tribute Page</a></p>
-        <p><a href="/documentation/index.html">Technical Documentation</a></p>
-        <p><a href="/landing-page/index.html">Landing Page</a></p>
+            <div id="showcase">
 
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eos perspiciatis ab ipsa quas minima libero
-            consectetur, eaque impedit molestias! Laudantium eos autem commodi? Quaerat nobis aliquid id repudiandae.
-            Beatae.
-        </p>
+                <div class="project">
+                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                </div> <!-- .project -->
 
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque incidunt quisquam ipsum tenetur eveniet,
-            officiis cupiditate, expedita nobis, nulla veniam labore nemo excepturi corporis sunt pariatur! A soluta
-            architecto porro.
-        </p>
+                <div class="project">
+                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                </div> <!-- .project -->
 
-        <div id="showcase">
+                <div class="project">
+                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                </div> <!-- .project -->
 
-            <div class="project">
-                <img src="https://loremflickr.com/200/200" />
-            </div> <!-- .project -->
+                <div class="project">
+                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                </div> <!-- .project -->
 
-            <div class="project">
-                <img src="https://loremflickr.com/200/200" />
-            </div> <!-- .project -->
+                <div class="project">
+                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                </div> <!-- .project -->
 
-            <div class="project">
-                <img src="https://loremflickr.com/200/200" />
-            </div> <!-- .project -->
+                <div class="project">
+                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                </div> <!-- .project -->
 
-            <div class="project">
-                <img src="https://loremflickr.com/200/200" />
-            </div> <!-- .project -->
+            </div> <!-- #showcase -->
 
-            <div class="project">
-                <img src="https://loremflickr.com/200/200" />
-            </div> <!-- .project -->
-
-        </div> <!-- #showcase -->
-    </div> <!-- #container -->
+            <footer>
+                <a href="#">Contact</a>
+                <a href="#">GitHub</a>
+            </footer>
+        </div> <!-- #container -->
+    </div>
 </body>
 
 </html>
