--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
     <title>Po</title>
 </head>
 
@@ -14,7 +15,7 @@
         <div id="container">
             <div id="header">
                 <div id="name">
-                    <h1>Radoslaw Polczyk</h1>
+                    <h1>{ Radoslaw Polczyk }</h1>
                 </div>
                 <nav>
                     <div>
@@ -31,17 +32,25 @@
                             Hi! Thanks for visiting my portfolio.
                             My name is Radoslaw but most people call me Radek.
                             I'm a web developer living in London, UK. I hope you will find here
-                            something that you like. 
+                            something that you like.
                             <br>
                             If you are looking for a web developer let me know.
                         </p>
                     </div>
 
+                    <div class="about-me empty-box">
+
+                    </div>
+
+                    <div class="about-me empty-box">
+
+                    </div>
+
                     <div class="about-me">
-                        <h2>Things I know:</h2>
+                        <h2>Here's what I know:</h2>
                         <h3>Qualifications</h3>
-                        <p>Computer Science:Games Programming (Bsc) - 2:2 </p>
-                        
+                        <p>Computer Science: Games Programming (Bsc) - 2:2 </p>
+
                         <h3>Skills</h3>
                         <ul id="skills">
                             <li>HTML</li>
@@ -51,42 +60,52 @@
                             <li>Google Fu</li>
                         </ul>
                     </div>
+
+                    <div class="about-me empty-box">
+                    </div>
+
+                    <div class="about-me empty-box">
+                    </div>
                 </section>
 
-                <p><a href="/survey">Survey Form</a></p>
-                <p><a href="/tribute/index.html">Tribute Page</a></p>
-                <p><a href="/documentation/index.html">Technical Documentation</a></p>
-                <p><a href="/landing-page/index.html">Landing Page</a></p>
+                
             </div>
 
-            <div id="showcase">
+            <section>
+                <h2 class="showcase-h2">Look what I made!</h2>
 
-                <div class="project">
-                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
-                </div> <!-- .project -->
+                <div id="showcase">
+                    <div class="project">
+                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                    </div> <!-- .project -->
 
-                <div class="project">
-                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
-                </div> <!-- .project -->
+                    <div class="project">
+                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                    </div> <!-- .project -->
 
-                <div class="project">
-                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
-                </div> <!-- .project -->
+                    <div class="project">
+                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                    </div> <!-- .project -->
 
-                <div class="project">
-                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
-                </div> <!-- .project -->
+                    <div class="project">
+                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                    </div> <!-- .project -->
 
-                <div class="project">
-                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
-                </div> <!-- .project -->
+                    <div class="project">
+                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                    </div> <!-- .project -->
 
-                <div class="project">
-                    <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
-                </div> <!-- .project -->
+                    <div class="project">
+                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                    </div> <!-- .project -->
 
-            </div> <!-- #showcase -->
+                </div> <!-- #showcase -->
+            </section>
 
+            <p><a href="/survey">Survey Form</a></p>
+            <p><a href="/tribute/index.html">Tribute Page</a></p>
+            <p><a href="/documentation/index.html">Technical Documentation</a></p>
+            <p><a href="/landing-page/index.html">Landing Page</a></p>
             <footer>
                 <a href="#">Contact</a>
                 <a href="#">GitHub</a>
