Add roman numerals converter to portfolio.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
                 <div id="showcase">
                     <div class="project">
-                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                        <a href="roman-numerals/">
+                            <img alt="Project Screenshot" src="roman.png" width="200" height="200" />
+                        </a>
                     </div> <!-- .project -->
 
                     <div class="project">
