Add link to github.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav>
                     <div>
                         <a href="#">Contact</a>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/dolorismachina" target="_blank">GitHub</a>
                     </div>
                 </nav>
             </div> <!-- #header -->
@@ -110,7 +110,7 @@
             <p><a href="/landing-page/index.html">Landing Page</a></p>
             <footer>
                 <a href="#">Contact</a>
-                <a href="#">GitHub</a>
+                <a href="https://github.com/dolorismachina" target="_blank">GitHub</a>
             </footer>
         </div> <!-- #container -->
     </div>
