Add link to the todo list project

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                     </div> <!-- .project -->
 
                     <div class="project">
-                        <img alt="Project Screenshot" src="https://loremflickr.com/200/200" />
+                      <a href="https://dolorismachina.github.io/todo/" target="_blank">
+                        <img alt="Project Screenshot" src="tasker.png" width="200" height="200" />
+                      </a>
                     </div> <!-- .project -->
 
                     <div class="project">
