--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="container">
       <div id="header">
         <div id="name">
-          <h1>{ Radoslaw Polczyk }</h1>
+          <h1>Radoslaw.Polczyk()</h1>
         </div>
         <nav>
           <div>
